DigicielFull/force-app/main/default/objects/Invoice__c/fields/AccountN__c.field-meta.xml
<CustomField>
    <fullName>AccountN__c</fullName>
    <label>Account N°</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>