DigicielFull/force-app/main/default/objects/Invoice__c/fields/AmountTTC__c.field-meta.xml
<CustomField>
    <fullName>AmountTTC__c</fullName>
    <inlineHelpText>Including tax</inlineHelpText>
    <label>TTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>