DigicielFull/force-app/main/default/objects/Invoice__c/fields/ClientNumber__c.field-meta.xml
<CustomField>
    <fullName>ClientNumber__c</fullName>
    <label>Client ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>