DigicielFull/force-app/main/default/objects/Invoice__c/fields/CurrentDue__c.field-meta.xml
<CustomField>
    <fullName>CurrentDue__c</fullName>
    <label>Current due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>