DigicielFull/force-app/main/default/objects/Invoice__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <label>Due date</label>
    <type>Date</type>
</CustomField>