DigicielFull/force-app/main/default/objects/Invoice__c/fields/InvoiceBalance__c.field-meta.xml
<CustomField>
    <fullName>InvoiceBalance__c</fullName>
    <label>Reste dû facture</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>