DigicielFull/force-app/main/default/objects/Invoice__c/fields/PaymentDueDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDueDate__c</fullName>
    <label>Payment due on</label>
    <type>Date</type>
</CustomField>