DigicielFull/force-app/main/default/objects/Invoice__c/fields/PaymentOptions__c.field-meta.xml
<CustomField>
    <fullName>PaymentOptions__c</fullName>
    <label>Mode de paiement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>