DigicielFull/force-app/main/default/objects/Invoice__c/fields/TVA__c.field-meta.xml
<CustomField>
    <fullName>TVA__c</fullName>
    <label>TVA</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>